2007-06-01  Piotr Fusik  <fox@scene.pl>
* java/Makefile: players.h not needed

* raw2c.pl: restored the old version because the script is not used for Java

* Makefile.in, win32/Makefile: "lib" static library target


2007-05-29  Piotr Fusik  <fox@scene.pl>
* asap.c: fixed a bug in Java version throwing StringIndexOutOfBoundsException

* asap.c, gsplayer/gspasap.c, win32/winamp/in_asap.c: TMC is now played
  in stereo, just like TM8


** 1.0.0 released on 2007-05-28

2007-05-27  Kostas Nakos  <knakos@gmail.com>
* win32/settings.rc: made the dialog box fit on Pocket PC display


2007-05-27  Piotr Fusik  <fox@scene.pl>
* acpu.c, asap_internal.h: emulate two write cycles of Read-Modify-Write
  instructions

* java/ASAP.ppjava, java/ASAPApplet.java: getPokeyChannelVolume() uses
  zero-based channel numbers

* java/ASAP.ppjava, java/ASAP2WAV.java: "-m" option

* java/asap_applet.txt, java/asap_midlet.txt, win32/Makefile: short info
  about the applet and the midlet

* java/ASAPMIDlet.java: show only supported files


2007-05-26  Piotr Fusik  <fox@scene.pl>
* asap.c: fixed POKEY timer interrupts; name defaults to base filename;
  all_info is updated for formats other than SAP

* apokeysnd.c: changed pass band to 20-15834 Hz

* java/ASAPMIDlet.java, java/Makefile, java/asap_midlet.MF: finished midlet
  implementation

* java/asap2wav.MF, java/Makefile, win32/Makefile: Java release package


2007-05-25  Piotr Fusik  <fox@scene.pl>
* java/ASAPApplet.java: fixed pause and switching between mono and stereo songs

* win32/settings.c: small fixes for Windows CE


2007-05-24  Piotr Fusik  <fox@scene.pl>
* java/ASAP.ppjava, java/ASAPApplet.java: display POKEY channel volume meters
  instead of textual info

* win32/foobar2000/foo_asap.cpp: fixed channel muting

* win32/winamp/in_asap.c: fixed file info box


2007-05-23  Piotr Fusik  <fox@scene.pl>
* apokeysnd.c, asap.h, java/ASAP.ppjava: skip pure ultrasounds
